Bug 312607 - ktorrent uses the same icon (download-later) for queued seeding as for queued downloads
Summary: ktorrent uses the same icon (download-later) for queued seeding as for queued...
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-04 15:14 UTC by Kenny D
Modified: 2024-01-31 20:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kenny D 2013-01-04 15:14:29 UTC
the same icon (download-later) is used to indicate a torrent is queued for seeding as is used for queued for download

this is confusing. there should be a different icon used for indicating queued torrents for seeding with a timer and an arrow pointing up the way similar to how seeding uses go-up and downloading uses go-down

Reproducible: Always

Steps to Reproduce:
1. have more torrents than you allow to seed at the same time
Comment 1 Bug Janitor Service 2024-01-26 15:38:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/breeze-icons/-/merge_requests/317
Comment 2 Bug Janitor Service 2024-01-26 15:39:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/ktorrent/-/merge_requests/107
Comment 3 Jack Hill 2024-01-31 19:13:30 UTC
Git commit 3deb6a41aeec399a0d388dbb6b16c6cd407f37cf by Jack Hill.
Committed on 31/01/2024 at 19:08.
Pushed by jackh into branch 'master'.

Add upload-later icon for KTorrent

A  +1    -0    icons/actions/16/upload-later-symbolic.svg
A  +8    -0    icons/actions/16/upload-later.svg
A  +1    -0    icons/actions/22/upload-later-symbolic.svg
A  +8    -0    icons/actions/22/upload-later.svg

https://invent.kde.org/frameworks/breeze-icons/-/commit/3deb6a41aeec399a0d388dbb6b16c6cd407f37cf
Comment 4 Jack Hill 2024-01-31 20:25:40 UTC
Git commit 3d83be0d724341c2f2db470c4709b566df6c7ede by Jack Hill.
Committed on 31/01/2024 at 20:19.
Pushed by jackh into branch 'master'.

Use different icon for queued seeding and queued downloading

M  +1    -1    ktorrent/view/viewmodel.cpp

https://invent.kde.org/network/ktorrent/-/commit/3d83be0d724341c2f2db470c4709b566df6c7ede