Use different icon for queued seeding and queued downloading

BUG: 312607